Remove extra files

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -41,6 +41,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Dash",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=C,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Jump",Key=W,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Move Right",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="Move Right",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="Move Right",Key=Left,Scale=-1.000000)
